[gd_scene format=3 uid="uid://lobqv4xddv3n"]

[ext_resource type="Script" uid="uid://cm5s2qsixxaf3" path="res://TSCN/ChracterPLAYABLE/Enemy.gd" id="1_7k104"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qjqp"]
radius = 84.0
height = 196.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2ukg"]
size = Vector2(152, 41)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r45eu"]
a = Vector2(8.899999, 7.3999996)
b = Vector2(-23.099998, 3.8999999)

[sub_resource type="CircleShape2D" id="CircleShape2D_ymkti"]
radius = 114.01754

[sub_resource type="CircleShape2D" id="CircleShape2D_jeeoh"]
radius = 66.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 90.0
height = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ultimate"]
radius = 200.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_7k104")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 19)
shape = SubResource("CapsuleShape2D_1qjqp")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="LightHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightHitbox"]
position = Vector2(-120, -6.5)
shape = SubResource("RectangleShape2D_x2ukg")
debug_color = Color(0.76070434, 0.119744755, 0.24070615, 0.41960785)

[node name="Visual" type="ColorRect" parent="LightHitbox"]
visible = false
offset_left = -190.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 20.0
color = Color(0.8, 0, 1, 0.5)

[node name="HeavyHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeavyHitbox"]
position = Vector2(-120, -2)
shape = SubResource("RectangleShape2D_x2ukg")
debug_color = Color(0.6538517, 0.11929586, 0.26092646, 0.41960785)

[node name="Visual" type="ColorRect" parent="HeavyHitbox"]
visible = false
offset_left = -190.0
offset_top = -25.0
offset_right = -50.0
offset_bottom = 25.0
color = Color(0.6, 0, 0.8, 0.5)

[node name="UltimateHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="UltimateHitbox"]
shape = SubResource("CircleShape2D_ultimate")
debug_color = Color(0.8, 0, 1, 0.3)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-3, 19)
shape = SubResource("CapsuleShape2D_hurtbox")
debug_color = Color(1, 0, 0, 0.2)

[node name="Camera2D" type="Camera2D" parent="."]
